--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,4 +1,12 @@
 {
-  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "builds": [
+    {
+      "src": "index.js", // Replace with your main backend file name
+      "use": "@vercel/node",
+      "config": {
+        "buildCommand": "npm install puppeteer" // Installs Puppeteer during build
+      }
+    }
+  ],
   "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
 }
