--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,12 +1,4 @@
 {
-  "builds": [
-    {
-      "src": "index.js", // Replace with your main backend file name
-      "use": "@vercel/node",
-      "config": {
-        "buildCommand": "npm install puppeteer" // Installs Puppeteer during build
-      }
-    }
-  ],
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
 }
